HW2 tidier methods